--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="col-8">
-                <h2 id="msg">You all will have to distribute 4 letters among yourself in 30 seconds.</h2>
+                <h2 id="msg">You all will have to distribute 4 letters among yourself. Your time starts in 3.. 2.. 1..</h2>
                 <div class="d-flex justify-content-around" style="margin-top: 60px;">
                     <button id="reset" value="reset" type="button" style="padding: 15px 35px; font-size: 2em;" class="btn btn-light">Reset</button>
                     <button id="start" value="start" type="button" style="padding: 15px 35px; font-size: 2em;" class="btn btn-dark">Start</button>
