--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="./Hera-Pheri-Memes-10.jpg"  class="corousel-image" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                  
-                  <h2  class="caption">You all will have to distribute 4 letters among yourself in 30 seconds.</h2>
+                  <h2  class="caption">You all will have to distribute 4 letters among yourself.</h2>
                 </div>
               </div>
               <div class="carousel-item">
